Enable headless testing